--- a/Hourly/res/layout/add_emp_dialog.xml
+++ b/Hourly/res/layout/add_emp_dialog.xml
@@ -5,7 +5,8 @@
 <RelativeLayout 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:id="@+id/dialog_rel_layout" >
     
     <EditText
         android:id="@+id/dialog_txt_new_emp_name" 
@@ -49,10 +50,16 @@
      <View
     android:layout_width="fill_parent"
     android:layout_height="1dp"
-    android:background="@android:color/darker_gray"/>
-  <ListView android:id="@+id/ob_list"
+    android:background="@android:color/darker_gray"
+    android:id="@+id/div"
+    android:layout_below="@id/dialog_txt_new_emp_salery"/>
+  <include 
+      layout="@layout/add_ob_row"
+      android:id="@+id/lstOB"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_width="match_parent"></ListView>
+      android:layout_below="@id/div">
+      </include>
      
      
     
